--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ input[type='range'] {
         height: 6px;
         vertical-align: middle;
         -webkit-appearance: none;
-        width: 10rem;
+        width: 9rem;
 }
 input[type="range"]::-moz-focus-inner:focus{   
     border : 0px;
@@ -50,4 +50,23 @@ input[type='range']::-moz-range-thumb {
         height: 20px;
         box-shadow: 3px 2px 3px #000;
         width: 20px;
+}
+
+#player {
+    width: 32rem;
+    height: 4rem;
+}
+
+#audio_content {
+    float: left;
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+}
+#volume_content {
+    position: absolute;
+    float: right;
+    width: 24rem;
+    padding-top: 1rem;
+    height: 2rem;
 }
