--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
-    background: yellow;
-    color: blue;
+    background: url('radio.jpg');
+    background-position: center;
+    color: #36648B;
     text-align: center;
     font-family: sans-serif;
 }
 img {
-    width: 3.5rem;
-    height: 3.5rem;    
+    width: 4rem;
+    height: 4rem;    
 }
 hr {
     border: 0;
@@ -23,7 +24,7 @@ input[type='range'] {
         height: 6px;
         vertical-align: middle;
         -webkit-appearance: none;
-        width: 9rem;
+        width: 135px;
 }
 input[type="range"]::-moz-focus-inner:focus{   
     border : 0px;
@@ -31,13 +32,13 @@ input[type="range"]::-moz-focus-inner:focus{
 } 
 input[type='range']::-moz-range-track {
         border-radius: 5px;
-        background-color: blue;
+        background-color: #3D3D3D;
         height: 6px;
         border: 1px dotted transparent !important;
 }
 input[type='range']::-webkit-slider-thumb {
         border-radius: 20px;
-        background-color: blue;
+        background-color: grey;
         border:none;
         box-shadow: 0 5px #000;
         height: 5px;
@@ -45,7 +46,7 @@ input[type='range']::-webkit-slider-thumb {
 }
 input[type='range']::-moz-range-thumb {
         border-radius: 20px;
-        background-color: blue;
+        background-color: grey;
         border:none;
         height: 20px;
         box-shadow: 3px 2px 3px #000;
@@ -53,20 +54,28 @@ input[type='range']::-moz-range-thumb {
 }
 
 #player {
-    width: 32rem;
+    width: 100%;
     height: 4rem;
 }
 
 #audio_content {
+    padding-top: 10px;
     float: left;
-    width: 5rem;
-    height: 5rem;
-    position: absolute;
+    width: 65px;
+    height: 4rem;
+    position: relative;
+    padding-left: 15px;
 }
 #volume_content {
-    position: absolute;
-    float: right;
-    width: 24rem;
-    padding-top: 1rem;
-    height: 2rem;
+    position: relative;
+    float: left;
+    width: 220px;
+    padding-top: 30px;
+    height: 4rem;
+
+}
+#volume {
+    padding: 0;
+    color: #242424;
+    font-weight: bold;
 }
