--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('radio.jpg');
+    background: url('../img/radio.jpg');
     background-position: center;
     color: #36648B;
     text-align: center;
